<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mColorDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/mImageView_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <!-- RGB -->

    <TextView
        android:id="@+id/mRGBTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="toggleContents"
        android:tag="mRGBContent"
        android:text="@string/mRGBTitle"
        app:layout_constraintBottom_toTopOf="@+id/mHSVTitle"
        app:layout_constraintTop_toTopOf="parent" />
    <RelativeLayout
        android:id="@+id/mRGBContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mRGBTitle">
        <TextView
            android:id="@+id/mRGBText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mRGBTextDefault" />

    </RelativeLayout>

    <!-- HSV -->

    <TextView
        android:id="@+id/mHSVTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="toggleContents"
        android:tag="mHSVContent"
        android:text="@string/mHSVTitle"
        app:layout_constraintTop_toBottomOf="@+id/mRGBTitle"
        app:layout_constraintBottom_toTopOf="@+id/mClosestColorTitle" />

    <RelativeLayout
        android:id="@+id/mHSVContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mHSVTitle">
        <TextView
            android:id="@+id/mHSVText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mHSVTextDefault" />
    </RelativeLayout>

    <!-- Closest Color -->
    <TextView
        android:id="@+id/mClosestColorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="toggleContents"
        android:tag="mClosestColorContent"
        android:text="@string/mClosestColorTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mHSVTitle" />

    <RelativeLayout
        android:id="@+id/mClosestColorContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mClosestColorTitle">
        <TextView
            android:id="@+id/mClosestColorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mClosestColorTextDefault" />

        <TextView
            android:id="@+id/mClosestColorRGB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mRGBTextDefault"
            android:layout_below="@+id/mClosestColorText" />
    </RelativeLayout>

    <!-- Buttons -->
    <Button
        android:id="@+id/mRetakeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mRetakeButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="reviewImage"
        android:text="@string/mReviewButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</android.support.constraint.ConstraintLayout>